--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@emailjs/browser": "^4.4.1",
     "@formspree/react": "^3.0.0",
     "@heroicons/react": "^2.2.0",
+    "@llm-ui/code": "^0.13.3",
+    "@llm-ui/markdown": "^0.13.3",
+    "@llm-ui/react": "^0.13.3",
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
     "@uiw/react-markdown-preview": "^5.1.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "html-react-parser": "^5.2.5",
     "lucide-react": "^0.344.0",
     "next": "^14.2.24",
     "react": "^18",
@@ -26,6 +30,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^1.29.2",
     "sonner": "^1.4.3",
     "swiper": "^11.2.5",
     "three": "^0.162.0",
