--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-react-parser": "^5.2.5",
     "lucide-react": "^0.344.0",
     "next": "^14.2.24",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18",
